[workspace]
members = ["navi", "utils"]

[workspace.dependencies]
tokio = "1.32.1"
sui-sdk = { git = "https://github.com/MystenLabs/sui"}
sui-types = { git = "https://github.com/MystenLabs/sui"}
sui-keys = { git = "https://github.com/MystenLabs/sui"}
shared-crypto = { git = "https://github.com/MystenLabs/sui"}
fastcrypto = "0.1.6"
serde_derive = "1.0.193"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
reqwest = "=0.11.20"
url = "2.5.0"
log = "0.4.19"
env_logger = { version = "0.10.0", features = [] }
statistical = "1.0.0"
bcs = "0.1.6"
clap = { version = "4.3.11", features = ["derive"] }
ethnum = "1.5.0"
fred = { version = "8.0.4", features = ["serde-json"] }
