[package]
name = "navi"
version = "0.1.0"
edition = "2021"

[lib]
name = "navi"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { workspace = true}
sui-types = { workspace = true}
sui-keys = { workspace = true}
shared-crypto = { workspace = true}
tokio = { workspace = true}
# fastcrypto = "0.1.6"
serde_derive =  {workspace = true}
serde_json = {workspace = true}
serde =  {workspace = true}
reqwest =  {workspace = true}
url =  {workspace = true}
log =  {workspace = true}
env_logger =  {workspace = true}
statistical =  {workspace = true}
bcs =  {workspace = true}
clap =  {workspace = true}
fred = { workspace = true }
ethnum = { version = "1.5.0", features = ["serde"] }
misc-utils = {path = "../utils"}
